# ai_playground

transcribe/: .dockerignore  answer_question.py  berget_rag.py  chunk_repository.py  course_rag.py  dev_transcribe.py  embed_chunks.py  extract_audio.py  extract_frames.py  extract_framesv2.py  local_hf_large.py  local_hf_medium.py  mcp_server.py  migrate_metadata_to_json.py  mise.toml  notes_sv.md  pyproject.toml  rag_api.py  remote.py  search_chunks.py  transcribe.py  transcribe_pipeline.py
transcribe/.github/workflows/: build-push-rag-api-gcr.yml
transcribe/api/: .gitignore  Dockerfile  README.md  pom.xml
transcribe/api/k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml
transcribe/api/k8s/overlays/dev/: kustomization.yaml
transcribe/api/src/main/java/se/jknowledge/transcribe/api/: ApiApplication.java
transcribe/api/src/main/java/se/jknowledge/transcribe/api/client/: BergetApiClient.java
transcribe/api/src/main/java/se/jknowledge/transcribe/api/config/: RagProperties.java
transcribe/api/src/main/java/se/jknowledge/transcribe/api/controller/: ChatCompletionsController.java  HealthController.java  ModelsController.java  SlidesController.java
transcribe/api/src/main/java/se/jknowledge/transcribe/api/model/: ChunkEntity.java  ChunkMatch.java
transcribe/api/src/main/java/se/jknowledge/transcribe/api/repository/: ChunkMatchProjection.java  (+1 more)
transcribe/api/src/main/java/se/jorgen/transcribe/api/: ApiApplication.java
transcribe/api/src/main/resources/: application.yml
(+18 files in other folders)
